<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.DetailGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true">
        </ImageView>

        <TextView
            android:id="@+id/tv_item_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/yellow">
        </TextView>

        <TextView
            android:id="@+id/tv_item_game_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_name"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/tv_item_game_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details"
            android:textSize="16sp"
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>

</ScrollView>